# Promptify

./: .gitignore  LICENSE  MANIFEST.in  README.md  cli.py  config.yml  main.py  modelConfig.py  node.py  pyproject.toml  state.py
.github/workflows/: release.yaml
TUI/: TUI.py
agent/: node.py  state.py
cli/: README.md  inspect_masker.py  pyproject.toml  reproduce_issue.py
cli/src/promptify/: __init__.py  cli.py
cli/src/promptify/agent/: graph.py  node.py  state.py
cli/src/promptify/cli_supports/: ConfigTUI.py  PromptifyTUI.py
cli/src/promptify/core/: formatter.py  service.py  validator.py
cli/src/promptify/core/providerSelection/: providers.py
cli/src/promptify/prompt/: CriticAgentPrompt.py  TriageAgentPrompt.py
cli_supports/: ConfigTUI.py
core/: service.py  validator.py
core/providerSelection/: config.py
docs/: PUBLISHING.md
extension/: README.md  run_server.bat
extension/backend/: API.md  Dockerfile  README.md  app_logging.py  main.py  pyproject.toml  requirements.txt
extension/client/: background.js  config.js  content.js  manifest.json  popup.html  popup.js
prompt/: CriticAgentPrompt.py  TriageAgentPrompt.py  expertAgentPrompt.py  promptSmith.py
promptify/: cli.py
promptify/cli_supports/: ConfigTUI.py  PromptifyTUI.py  help_content.py
promptify/core/: formatter.py  service.py
promptify/core/providerSelection/: config.py  providers.py
test/: testModelConnection.py
utils/: errors.py
