[project]
name = "promtify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.1.0",
    "langchain-google-genai>=3.2.0",
    "pyperclip>=1.11.0",
    "rich>=14.2.0",
    "typer>=0.20.0",
]
