[project]
name = "pfy"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.1.0",
    "langchain-google-genai>=3.2.0",
    "litellm>=1.80.5",
    "pyfiglet>=1.0.4",
    "pyperclip>=1.11.0",
    "rich>=14.2.0",
    "textual>=6.7.1",
    "typer>=0.20.0",
]

[project.scripts]
promptify = "promptify.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["promptify*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
