[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pfy"
version = "0.1.4"
description = "AI-powered prompt engineering CLI with multi-agent system"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "python-dotenv>=1.0.0",
    "langchain>=1.1.0",
    "langchain-google-genai>=3.2.0",
    "litellm>=1.80.5",
    "pyfiglet>=1.0.4",
    "pyperclip>=1.11.0",
    "rich>=14.2.0",
    "textual>=6.7.1",
    "typer>=0.20.0",
    "promptmasker>=0.0",
]

[project.scripts]
promptify = "promptify.cli:app"

[project.urls]
Homepage = "https://github.com/siva-netizen/Promptify"
Repository = "https://github.com/siva-netizen/Promptify"

[tool.setuptools.packages.find]
where = ["src"]
include = ["promptify*"]
